# ChrisGeometry

./: .gitignore  HGCMaterials.h  HGCMaterials.m  HGCMaterials.xib  HGCTerminalControl.h  HGCTerminalControl.m  HGCTerminalControl.xib  HTDColorControl.m  HXGAppDelegate.h  HXGAppDelegate.m  HXGCell.h  HXGCell.m  HXGCellControl.h  HXGCellControl.m  HXGCellControl.xib  HXGCellLabel.h  HXGCellLabel.m  HXGCellView.h  HXGCellView.m  HXGEtaRingsControl.m  HXGEtaRingsControl.xib  HXGHexView.h  HXGHexView.m  HXGInspectorView.h  HXGInspectorView.m  HXGLayerMapFiles.h  HXGLayerMapFiles.m  HXGMainControl.h  HXGMainControl.m  HXGMainControl.xib  HXGPartControl.h  HXGPartControl.m  HXGPartControl.xib  HXGPartView.h  HXGPartView.m  HXGPositionControl.h  HXGPositionControl.m  HXGPositionControl.xib  HXGPreferenceControl.h  HXGPreferenceControl.m  (+25 more)
Base.lproj/: main.m
General/: CSGraphPaper.m  HTDColorControl.h  HTDColorControl.xib  HTDFadeView.m  HistView.h  HistViewControl.h  HistViewControl.m
Hex/: CEE-CuPolygons.csv  HD0-calibMap.csv  HD0-hexaboardMap.csv  HD1-calibMap.csv  HD1-hexaboardMap.csv  HD2-calibMap.csv  HD2-hexaboardMap.csv  HD3-calibMap.csv  HD3-hexaboardMap.csv  HD4-calibMap.csv  HD4-hexaboardMap.csv  HDtileTest.txt  HXGActiveWafer.h  HXGActiveWafer.m  HXGAppDelegate.h  HXGAppDelegate.m  HXGCell.h  HXGCell.m  HXGCellAreas.h  HXGCellAreas.m  HXGCellControl.h  HXGCellControl.m  HXGCellControl.xib  HXGCellLabel.h  HXGCellLabel.m  HXGCellView.h  HXGCellView.m  HXGCoverageControl.h  HXGCoverageControl.m  HXGCoverageControl.xib  HXGHexView.h  (+56 more)
Hex.xcodeproj/: project.pbxproj
(+161 files in other folders)
